--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.18"
+    "@element-plus/icons-vue": "^2.3.2",
+    "axios": "^1.6.2",
+    "echarts": "^5.4.3",
+    "element-plus": "^2.4.4",
+    "gsap": "^3.12.2",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "vue": "^3.5.18",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.2"
+    "sass": "^1.69.5",
+    "vite": "^7.1.2",
+    "vite-plugin-pwa": "^0.17.4"
   }
 }
