--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.6.2",
     "echarts": "^5.4.3",
     "element-plus": "^2.4.4",
     "gsap": "^3.12.2",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "segment": "^0.1.3",
     "vue": "^3.5.18",
     "vue-router": "^4.2.5"
   },
