--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "segment": "^0.1.3",
+    "three": "^0.180.0",
     "vue": "^3.5.18",
     "vue-router": "^4.2.5"
   },
